@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-01T08:07:23Z",
-  "count_outdated" : 1598,
-  "uniques_outdated" : 444,
-  "count" : 1649,
-  "uniques" : 470,
+  "timestamp" : "2022-07-01T16:06:26Z",
+  "count_outdated" : 1600,
+  "uniques_outdated" : 445,
+  "count" : 1651,
+  "uniques" : 471,
   "clones" : [
-    {
-      "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 4,
@@ -98,10 +91,10 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
