@@ -1,12 +1,7 @@
 {
   "count": 51,
-  "uniques": 12,
+  "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 4,
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
